Pipeline in jupyter notebook extended to feature union + URL tokenization

--- a/pipelines/ML Pipeline Preparation.ipynb
+++ b/pipelines/ML Pipeline Preparation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,18 +48,21 @@
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "import pickle\n",
     "\n",
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
     "from sklearn.multioutput import MultiOutputClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from termcolor import colored\n"
    ]
   },
   {
@@ -496,12 +499,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
     "def tokenize(text):\n",
-    "\n",
+    "    \n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "        \n",
     "    tokens = word_tokenize(text)\n",
     "    lemmatizer = WordNetLemmatizer()\n",
     "\n",
@@ -514,6 +522,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StartingVerbExtractor(BaseEstimator, TransformerMixin):\n",
+    "\n",
+    "    def starting_verb(self, text):\n",
+    "        sentence_list = nltk.sent_tokenize(text)\n",
+    "        for sentence in sentence_list:\n",
+    "            pos_tags = nltk.pos_tag(tokenize(sentence))\n",
+    "            first_word, first_tag = pos_tags[0]\n",
+    "            if first_tag in ['VB', 'VBP'] or first_word == 'RT':\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_tagged = pd.Series(X).apply(self.starting_verb)\n",
+    "        return pd.DataFrame(X_tagged)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -523,14 +556,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipe = Pipeline([\n",
-    "    ('v', CountVectorizer(tokenizer=tokenize)),\n",
-    "    ('t', TfidfTransformer()),  \n",
-    "    ('cl', MultiOutputClassifier(RandomForestClassifier()))\n",
+    "    ('featunion', FeatureUnion([\n",
+    "        ('txtpipe', Pipeline([\n",
+    "            ('vec', CountVectorizer(tokenizer=tokenize)),\n",
+    "            ('df', TfidfTransformer())\n",
+    "        ])),\n",
+    "        ('txtstverb', StartingVerbExtractor())\n",
+    "    ])),\n",
+    "    ('cl', MultiOutputClassifier(RandomForestClassifier()))    \n",
+    "\n",
     "])"
    ]
   },
@@ -545,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,24 +593,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('v',\n",
-       "                 CountVectorizer(tokenizer=<function tokenize at 0x7f8500fc8a60>)),\n",
-       "                ('t', TfidfTransformer()),\n",
-       "                ('cl',\n",
-       "                 MultiOutputClassifier(estimator=RandomForestClassifier()))])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipe.fit(X_train, y_train)"
    ]
@@ -586,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -597,122 +621,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred.shape[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6554, 36)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f-score for category related is 0.7597258337131119\n",
-      "f-score for category request is 0.8803989593771443\n",
-      "f-score for category offer is 0.992910702456745\n",
-      "f-score for category aid_related is 0.76849143751423\n",
-      "f-score for category medical_help is 0.882224670250654\n",
-      "f-score for category medical_products is 0.9274167067146191\n",
-      "f-score for category search_and_rescue is 0.9604556402785495\n",
-      "f-score for category security is 0.9725441504507724\n",
-      "f-score for category military is 0.9585624766530092\n",
-      "f-score for category child_alone is 1.0\n",
-      "f-score for category water is 0.9369702833529696\n",
-      "f-score for category food is 0.9105925067021251\n",
-      "f-score for category shelter is 0.9106351364938527\n",
-      "f-score for category clothing is 0.9790652645616077\n",
-      "f-score for category money is 0.9682558981275692\n",
-      "f-score for category missing_people is 0.9815001255930063\n",
-      "f-score for category refugees is 0.9502354159794533\n",
-      "f-score for category death is 0.9442332049080681\n",
-      "f-score for category other_aid is 0.8143572997735267\n",
-      "f-score for category infrastructure_related is 0.9020236039409266\n",
-      "f-score for category transport is 0.9340163158851201\n",
-      "f-score for category buildings is 0.9287047123204516\n",
-      "f-score for category electricity is 0.9703914608803161\n",
-      "f-score for category tools is 0.9903978491675395\n",
-      "f-score for category hospitals is 0.9830958294142935\n",
-      "f-score for category shops is 0.9917683203545051\n",
-      "f-score for category aid_centers is 0.981955981718489\n",
-      "f-score for category other_infrastructure is 0.9360052251470911\n",
-      "f-score for category weather_related is 0.8653476380627309\n",
-      "f-score for category floods is 0.9327936691637926\n",
-      "f-score for category storm is 0.9258631026468755\n",
-      "f-score for category fire is 0.9850720076827911\n",
-      "f-score for category earthquake is 0.9691157615209892\n",
-      "f-score for category cold is 0.9701405104820193\n",
-      "f-score for category other_weather is 0.9223346714156966\n",
-      "f-score for category direct_report is 0.8443509259853604\n",
-      "================================================\n",
-      "average f-score for all columns is 0.9314431471858333\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = []\n",
     "for i, col in enumerate(cat_cols):    \n",
     "    precision, recall, fscore, support = precision_recall_fscore_support(y_test[:, i], y_pred[:, i], average='weighted')\n",
     "    score.append(fscore)\n",
-    "    print(\"f-score for category {} is {}\".format(col, fscore))\n",
+    "    print(\"f-score for category {} is {}\".format(colored(col, 'red'), colored(fscore, 'blue')))\n",
     "    \n",
     "#average of all f1 scores\n",
-    "print(\"{}\".format('================================================'))\n",
-    "print(\"average f-score for all columns is {}\".format(sum(score)/len(score)))"
+    "print(\"{}\".format(colored('================================================', 'green')))\n",
+    "print(\"average f-score for all columns is {}\".format(colored(sum(score)/len(score), 'red', attrs=['bold'])))"
    ]
   },
   {
