Pipeline in jupyter notebook extended to feature union + URL tokenization

--- a/pipelines/ML Pipeline Preparation.ipynb
+++ b/pipelines/ML Pipeline Preparation.ipynb
@@ -593,9 +593,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('featunion',\n",
+       "                 FeatureUnion(transformer_list=[('txtpipe',\n",
+       "                                                 Pipeline(steps=[('vec',\n",
+       "                                                                  CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>)),\n",
+       "                                                                 ('df',\n",
+       "                                                                  TfidfTransformer())])),\n",
+       "                                                ('txtstverb',\n",
+       "                                                 StartingVerbExtractor())])),\n",
+       "                ('cl',\n",
+       "                 MultiOutputClassifier(estimator=RandomForestClassifier()))])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe.fit(X_train, y_train)"
    ]
@@ -610,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -621,27 +641,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred.shape[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6554, 36)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f-score for category \u001b[31mrelated\u001b[0m is \u001b[34m0.7643645191184614\u001b[0m\n",
+      "f-score for category \u001b[31mrequest\u001b[0m is \u001b[34m0.8756027967745994\u001b[0m\n",
+      "f-score for category \u001b[31moffer\u001b[0m is \u001b[34m0.9954249742407071\u001b[0m\n",
+      "f-score for category \u001b[31maid_related\u001b[0m is \u001b[34m0.7599425586813451\u001b[0m\n",
+      "f-score for category \u001b[31mmedical_help\u001b[0m is \u001b[34m0.8912999930660006\u001b[0m\n",
+      "f-score for category \u001b[31mmedical_products\u001b[0m is \u001b[34m0.9316737514946736\u001b[0m\n",
+      "f-score for category \u001b[31msearch_and_rescue\u001b[0m is \u001b[34m0.9636973469422043\u001b[0m\n",
+      "f-score for category \u001b[31msecurity\u001b[0m is \u001b[34m0.9713275186273368\u001b[0m\n",
+      "f-score for category \u001b[31mmilitary\u001b[0m is \u001b[34m0.9510964047718639\u001b[0m\n",
+      "f-score for category \u001b[31mchild_alone\u001b[0m is \u001b[34m1.0\u001b[0m\n",
+      "f-score for category \u001b[31mwater\u001b[0m is \u001b[34m0.9358451660887567\u001b[0m\n",
+      "f-score for category \u001b[31mfood\u001b[0m is \u001b[34m0.9165992810600903\u001b[0m\n",
+      "f-score for category \u001b[31mshelter\u001b[0m is \u001b[34m0.9235514857184473\u001b[0m\n",
+      "f-score for category \u001b[31mclothing\u001b[0m is \u001b[34m0.9773221385235019\u001b[0m\n",
+      "f-score for category \u001b[31mmoney\u001b[0m is \u001b[34m0.9634329762646571\u001b[0m\n",
+      "f-score for category \u001b[31mmissing_people\u001b[0m is \u001b[34m0.9835518513881841\u001b[0m\n",
+      "f-score for category \u001b[31mrefugees\u001b[0m is \u001b[34m0.9538170746665989\u001b[0m\n",
+      "f-score for category \u001b[31mdeath\u001b[0m is \u001b[34m0.9463448293215374\u001b[0m\n",
+      "f-score for category \u001b[31mother_aid\u001b[0m is \u001b[34m0.818032373974385\u001b[0m\n",
+      "f-score for category \u001b[31minfrastructure_related\u001b[0m is \u001b[34m0.9017948394962475\u001b[0m\n",
+      "f-score for category \u001b[31mtransport\u001b[0m is \u001b[34m0.946770095090428\u001b[0m\n",
+      "f-score for category \u001b[31mbuildings\u001b[0m is \u001b[34m0.9341439301091519\u001b[0m\n",
+      "f-score for category \u001b[31melectricity\u001b[0m is \u001b[34m0.9716027769620922\u001b[0m\n",
+      "f-score for category \u001b[31mtools\u001b[0m is \u001b[34m0.9890278010786581\u001b[0m\n",
+      "f-score for category \u001b[31mhospitals\u001b[0m is \u001b[34m0.9821839275622954\u001b[0m\n",
+      "f-score for category \u001b[31mshops\u001b[0m is \u001b[34m0.9933677373780979\u001b[0m\n",
+      "f-score for category \u001b[31maid_centers\u001b[0m is \u001b[34m0.981195923194111\u001b[0m\n",
+      "f-score for category \u001b[31mother_infrastructure\u001b[0m is \u001b[34m0.9364528603575871\u001b[0m\n",
+      "f-score for category \u001b[31mweather_related\u001b[0m is \u001b[34m0.8605293584808287\u001b[0m\n",
+      "f-score for category \u001b[31mfloods\u001b[0m is \u001b[34m0.938094865168246\u001b[0m\n",
+      "f-score for category \u001b[31mstorm\u001b[0m is \u001b[34m0.9269942300355655\u001b[0m\n",
+      "f-score for category \u001b[31mfire\u001b[0m is \u001b[34m0.9856045357418097\u001b[0m\n",
+      "f-score for category \u001b[31mearthquake\u001b[0m is \u001b[34m0.9592333759612226\u001b[0m\n",
+      "f-score for category \u001b[31mcold\u001b[0m is \u001b[34m0.9764714823200173\u001b[0m\n",
+      "f-score for category \u001b[31mother_weather\u001b[0m is \u001b[34m0.9183735881743073\u001b[0m\n",
+      "f-score for category \u001b[31mdirect_report\u001b[0m is \u001b[34m0.8385252740550225\u001b[0m\n",
+      "\u001b[32m================================================\u001b[0m\n",
+      "average f-score for all columns is \u001b[1m\u001b[31m0.9323137122746957\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "score = []\n",
     "for i, col in enumerate(cat_cols):    \n",
@@ -664,42 +769,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'memory': None,\n",
-       " 'steps': [('v',\n",
-       "   CountVectorizer(tokenizer=<function tokenize at 0x7f8500fc8a60>)),\n",
-       "  ('t', TfidfTransformer()),\n",
+       " 'steps': [('featunion',\n",
+       "   FeatureUnion(transformer_list=[('txtpipe',\n",
+       "                                   Pipeline(steps=[('vec',\n",
+       "                                                    CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>)),\n",
+       "                                                   ('df', TfidfTransformer())])),\n",
+       "                                  ('txtstverb', StartingVerbExtractor())])),\n",
        "  ('cl', MultiOutputClassifier(estimator=RandomForestClassifier()))],\n",
        " 'verbose': False,\n",
-       " 'v': CountVectorizer(tokenizer=<function tokenize at 0x7f8500fc8a60>),\n",
-       " 't': TfidfTransformer(),\n",
+       " 'featunion': FeatureUnion(transformer_list=[('txtpipe',\n",
+       "                                 Pipeline(steps=[('vec',\n",
+       "                                                  CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>)),\n",
+       "                                                 ('df', TfidfTransformer())])),\n",
+       "                                ('txtstverb', StartingVerbExtractor())]),\n",
        " 'cl': MultiOutputClassifier(estimator=RandomForestClassifier()),\n",
-       " 'v__analyzer': 'word',\n",
-       " 'v__binary': False,\n",
-       " 'v__decode_error': 'strict',\n",
-       " 'v__dtype': numpy.int64,\n",
-       " 'v__encoding': 'utf-8',\n",
-       " 'v__input': 'content',\n",
-       " 'v__lowercase': True,\n",
-       " 'v__max_df': 1.0,\n",
-       " 'v__max_features': None,\n",
-       " 'v__min_df': 1,\n",
-       " 'v__ngram_range': (1, 1),\n",
-       " 'v__preprocessor': None,\n",
-       " 'v__stop_words': None,\n",
-       " 'v__strip_accents': None,\n",
-       " 'v__token_pattern': '(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       " 'v__tokenizer': <function __main__.tokenize(text)>,\n",
-       " 'v__vocabulary': None,\n",
-       " 't__norm': 'l2',\n",
-       " 't__smooth_idf': True,\n",
-       " 't__sublinear_tf': False,\n",
-       " 't__use_idf': True,\n",
+       " 'featunion__n_jobs': None,\n",
+       " 'featunion__transformer_list': [('txtpipe',\n",
+       "   Pipeline(steps=[('vec',\n",
+       "                    CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>)),\n",
+       "                   ('df', TfidfTransformer())])),\n",
+       "  ('txtstverb', StartingVerbExtractor())],\n",
+       " 'featunion__transformer_weights': None,\n",
+       " 'featunion__verbose': False,\n",
+       " 'featunion__txtpipe': Pipeline(steps=[('vec',\n",
+       "                  CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>)),\n",
+       "                 ('df', TfidfTransformer())]),\n",
+       " 'featunion__txtstverb': StartingVerbExtractor(),\n",
+       " 'featunion__txtpipe__memory': None,\n",
+       " 'featunion__txtpipe__steps': [('vec',\n",
+       "   CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>)),\n",
+       "  ('df', TfidfTransformer())],\n",
+       " 'featunion__txtpipe__verbose': False,\n",
+       " 'featunion__txtpipe__vec': CountVectorizer(tokenizer=<function tokenize at 0x7f8490d3cca0>),\n",
+       " 'featunion__txtpipe__df': TfidfTransformer(),\n",
+       " 'featunion__txtpipe__vec__analyzer': 'word',\n",
+       " 'featunion__txtpipe__vec__binary': False,\n",
+       " 'featunion__txtpipe__vec__decode_error': 'strict',\n",
+       " 'featunion__txtpipe__vec__dtype': numpy.int64,\n",
+       " 'featunion__txtpipe__vec__encoding': 'utf-8',\n",
+       " 'featunion__txtpipe__vec__input': 'content',\n",
+       " 'featunion__txtpipe__vec__lowercase': True,\n",
+       " 'featunion__txtpipe__vec__max_df': 1.0,\n",
+       " 'featunion__txtpipe__vec__max_features': None,\n",
+       " 'featunion__txtpipe__vec__min_df': 1,\n",
+       " 'featunion__txtpipe__vec__ngram_range': (1, 1),\n",
+       " 'featunion__txtpipe__vec__preprocessor': None,\n",
+       " 'featunion__txtpipe__vec__stop_words': None,\n",
+       " 'featunion__txtpipe__vec__strip_accents': None,\n",
+       " 'featunion__txtpipe__vec__token_pattern': '(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       " 'featunion__txtpipe__vec__tokenizer': <function __main__.tokenize(text)>,\n",
+       " 'featunion__txtpipe__vec__vocabulary': None,\n",
+       " 'featunion__txtpipe__df__norm': 'l2',\n",
+       " 'featunion__txtpipe__df__smooth_idf': True,\n",
+       " 'featunion__txtpipe__df__sublinear_tf': False,\n",
+       " 'featunion__txtpipe__df__use_idf': True,\n",
        " 'cl__estimator__bootstrap': True,\n",
        " 'cl__estimator__ccp_alpha': 0.0,\n",
        " 'cl__estimator__class_weight': None,\n",
@@ -723,7 +853,7 @@
        " 'cl__n_jobs': None}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
