Converting all message categories to binary

--- a/pipelines/ETL Pipeline Preparation.ipynb
+++ b/pipelines/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -111,20 +111,20 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load messages dataset\n",
-    "messages = pd.read_csv('../data/disaster_messages.csv')\n",
+    "messages = pd.read_csv('messages.csv')\n",
     "messages.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -191,20 +191,20 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load categories dataset\n",
-    "categories = pd.read_csv('../data/disaster_categories.csv')\n",
+    "categories = pd.read_csv('categories.csv')\n",
     "categories.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "(26248, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "(26248, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "(26386, 5)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,11 +1204,133 @@
     "for column in categories:\n",
     "    # set each value to be the last character of the string\n",
     "    categories[column] = categories[column].apply(lambda x:x[-1:])\n",
+    "    categories[column] = categories[column].str.replace('2', '1')\n",
     "    \n",
     "    # convert column from string to numeric\n",
     "    categories[column] = categories[column].astype(int)\n",
     "categories.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0\n",
+       "related                   1\n",
+       "request                   1\n",
+       "offer                     1\n",
+       "aid_related               1\n",
+       "medical_help              1\n",
+       "medical_products          1\n",
+       "search_and_rescue         1\n",
+       "security                  1\n",
+       "military                  1\n",
+       "child_alone               0\n",
+       "water                     1\n",
+       "food                      1\n",
+       "shelter                   1\n",
+       "clothing                  1\n",
+       "money                     1\n",
+       "missing_people            1\n",
+       "refugees                  1\n",
+       "death                     1\n",
+       "other_aid                 1\n",
+       "infrastructure_related    1\n",
+       "transport                 1\n",
+       "buildings                 1\n",
+       "electricity               1\n",
+       "tools                     1\n",
+       "hospitals                 1\n",
+       "shops                     1\n",
+       "aid_centers               1\n",
+       "other_infrastructure      1\n",
+       "weather_related           1\n",
+       "floods                    1\n",
+       "storm                     1\n",
+       "fire                      1\n",
+       "earthquake                1\n",
+       "cold                      1\n",
+       "other_weather             1\n",
+       "direct_report             1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories.max()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0\n",
+       "related                   0.767301\n",
+       "request                   0.171038\n",
+       "offer                     0.004586\n",
+       "aid_related               0.415144\n",
+       "medical_help              0.079550\n",
+       "medical_products          0.049989\n",
+       "search_and_rescue         0.027477\n",
+       "security                  0.017850\n",
+       "military                  0.032707\n",
+       "child_alone               0.000000\n",
+       "water                     0.063822\n",
+       "food                      0.112029\n",
+       "shelter                   0.088759\n",
+       "clothing                  0.015539\n",
+       "money                     0.022967\n",
+       "missing_people            0.011408\n",
+       "refugees                  0.033351\n",
+       "death                     0.045630\n",
+       "other_aid                 0.131282\n",
+       "infrastructure_related    0.064769\n",
+       "transport                 0.045933\n",
+       "buildings                 0.050974\n",
+       "electricity               0.020390\n",
+       "tools                     0.006026\n",
+       "hospitals                 0.010725\n",
+       "shops                     0.004548\n",
+       "aid_centers               0.011711\n",
+       "other_infrastructure      0.043773\n",
+       "weather_related           0.278292\n",
+       "floods                    0.082506\n",
+       "storm                     0.093383\n",
+       "fire                      0.010687\n",
+       "earthquake                0.093269\n",
+       "cold                      0.020200\n",
+       "other_weather             0.052263\n",
+       "direct_report             0.193777\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1997,7 +2119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///../data/response.db')\n",
+    "engine = create_engine('sqlite:///response.db')\n",
     "df.to_sql('messages', engine, index=False, if_exists='replace')"
    ]
   },
